src/index.css
body {
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif; */
    font-family: 'Inter';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.sidebar-nav{
  display: flex;
  justify-content: space-around;
  background-color: green;
  height: 100%;
}

/* width */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1; 
  border-radius: 10px;
  
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #888; 
  border-radius: 10px;
  background-color: var(--page-title);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555; 
  background-color: var(--page-title-hover);
}

:root{
  --text: #370021;
  --placeholder: #573448;
  --page-title: #593325;
  --page-title-hover: rgb(125, 77, 61);
  --btn: #713916;
  --popup-color: #260B01;
  --popup-color-light:rgb(85, 28, 5);
}

.page-container{
  display: flex;
  width: 100%;
}

.aside{
  display: flex;
  width: 100%;
}

.page-content-container{
  display: flex;
  flex-direction: column;
  width: 100%;
}

.page-title-container{
  display: flex;
  margin: 2%;
}


.page-title{
  font-weight: bold;
  color: var(--page-title);
  font-size: 32px;
}

/* 
#root{
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
} */

